[start]环境搭建，依赖处理

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -34,6 +34,7 @@
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-spring-boot-starter</artifactId>
             <version>1.24.0</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
     <dependencyManagement>
