--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/poc?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
     username: root
-    password:
+    password: root
     filters: stat
     maxActive: 20
     initialSize: 1
