--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+## 数据库配置
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/poc?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
@@ -17,3 +18,10 @@ spring:
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+## 接口配置
+server:
+  port: 9000
+  servlet:
+    context-path: '/leyuna'
+  address: 127.0.0.1
