--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 ## 数据库配置
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/poc?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: root
     filters: stat
