--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -26,3 +26,12 @@ server:
     context-path: '/leyuna'
   address: 127.0.0.1
 
+## mp日志
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
+
+logging:
+  level:
+    com.chz.mapper: debug
+
