--- a/daoservice/pom.xml
+++ b/daoservice/pom.xml
@@ -5,6 +5,18 @@
     <groupId>com.blog.daoservice</groupId>
     <artifactId>daoservice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <name>daoservice</name>
     <description>Demo project for Spring Boot</description>
     <properties>
@@ -34,6 +46,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.38</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.2.3</version>
         </dependency>
     </dependencies>
 </project>
