--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,6 +5,18 @@
     <groupId>com.blog.web</groupId>
     <artifactId>web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <name>web</name>
     <description>Demo project for Spring Boot</description>
 
