--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -31,6 +31,7 @@ mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
 
+## 打印日志级别
 logging:
   level:
     com.chz.mapper: debug
