--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -2,4 +2,22 @@
 spring.application.name=web
 
 
-
+# REDIS (RedisProperties)
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）  暂时没弄懂设密码的必要 在一台服务器使用的时候
+#spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.poolMaxActive=20
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.poolMaxWait=-1
+# 连接池中的最大空闲连接
+spring.redis.poolMaxIdle=8
+# 连接池中的最小空闲连接
+spring.redis.poolMinIdle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=5000
