[update]file max size

--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -18,7 +18,10 @@ spring:
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
 ## 接口配置
 server:
   port: 9000
