--- a/web/pom.xml
+++ b/web/pom.xml
@@ -22,10 +22,13 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
+        <source>8</source>
+        <target>8</target>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+
     </properties>
 
     <dependencies>
