--- a/blog-start/pom.xml
+++ b/blog-start/pom.xml
@@ -4,6 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.leyuna</groupId>
     <artifactId>blog-start</artifactId>
+    <packaging>war</packaging>
+
     <version>0.0.1-SNAPSHOT</version>
     <name>blog-start</name>
     <description>Demo project for Spring Boot</description>
