[ADD]微服务平台搭建完成

--- a/blog-start/src/main/resources/application.properties
+++ b/blog-start/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.redis.poolMaxIdle=8
 spring.redis.poolMinIdle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=5000
+
+# 熔断器配置
+feign.hystrix.enabled=true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
