--- a/blog-start/src/main/resources/application.yml
+++ b/blog-start/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   application:
     name: leyuna-blog
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
     username: root
     password: root
     filters: stat
