--- a/blog-start/src/main/resources/application.properties
+++ b/blog-start/src/main/resources/application.properties
@@ -18,6 +18,11 @@ spring.redis.poolMinIdle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=5000
 
+spring.application.name=LEYUNA-BLOG
+
 # 熔断器配置
-feign.hystrix.enabled=true
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+feign.hystrix.enabled=true
+# feign客户端配置
+feign.client.config.default.connect-timeout=50000
+feign.client.config.default.read-timeout=50000
