--- a/blog-start/src/main/resources/bootstrap.properties
+++ b/blog-start/src/main/resources/bootstrap.properties
@@ -1,4 +1,7 @@
-spring.application.name=leyuna-blog
-spring.cloud.config.label=master
-spring.cloud.config.profile=dev
-spring.cloud.config.uri=http://localhost:8002/
+spring.application.name=LEYUNA-BLOG
+
+spring.cloud.nacos.discovery.server-addr=localhost:8848
+spring.cloud.nacos.config.server-addr=localhost:8848
+spring.cloud.nacos.config.file-extension=properties
+spring.cloud.nacos.config.prefix=LEYUNA-BLOG
+spring.profiles.active=dev
