--- a/blog-start/pom.xml
+++ b/blog-start/pom.xml
@@ -14,6 +14,9 @@
         <artifactId>blog</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <properties>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.leyuna</groupId>
