--- a/blog-start/src/main/resources/bootstrap.properties
+++ b/blog-start/src/main/resources/bootstrap.properties
@@ -5,3 +5,4 @@ spring.cloud.nacos.config.server-addr=localhost:8848
 spring.cloud.nacos.config.file-extension=properties
 spring.cloud.nacos.config.prefix=LEYUNA-BLOG
 spring.profiles.active=dev
+server.port=9000
