--- a/blog-start/pom.xml
+++ b/blog-start/pom.xml
@@ -17,6 +17,18 @@
     <properties>
         <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
+    <build>
+        <!-- 为jar包取名 -->
+        <finalName>blog-demo</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.0.RELEASE</version>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>com.leyuna</groupId>
