[UPDATE]项目结构重构3.0 - 修改实体名

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea/libraries
 .idea/EasyCodeConfig
-
+.idea/
 
 /blog-web/target/
 /blog-start/target/
@@ -9,5 +9,3 @@
 /blog-domain/target/
 /blog-client/target/
 /cloud-server/target/
-
-/.idea/libraries/
