--- a/blog-start/src/main/resources/application.properties
+++ b/blog-start/src/main/resources/application.properties
@@ -17,12 +17,20 @@ spring.redis.poolMaxIdle=8
 spring.redis.poolMinIdle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=5000
-
 spring.application.name=LEYUNA-BLOG
-
 # 熔断器配置
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 feign.hystrix.enabled=true
 # feign客户端配置
 feign.client.config.default.connect-timeout=50000
 feign.client.config.default.read-timeout=50000
+##服务器常数
+SERVER_HEAD_IMG_ADDR=https://www.leyuna.xyz/image/avatar/
+SERVER_HEAD_IMG_DEFAULT=https://www.leyuna.xyz/image/avatar/default.jpg
+SERVER_HEAD_IMG_ADMIN=https://www.leyuna.xyz/image/avatar/admin.jpg
+SERVER_IMG_SAVE_PATH=https://www.leyuna.xyz/image/
+SERVER_EMO_SAVE_PATH=https://www.leyuna.xyz/image/emo/
+DIR_SAVE_PATH=C:/dir/blogDir/
+EMO_SAVE_PATH=C:/img/emo/
+IMG_SAVE_PATH=C:/img/
+SERVER_NAME=LeYuna
