--- a/blog-start/src/main/resources/application.properties
+++ b/blog-start/src/main/resources/application.properties
@@ -29,6 +29,7 @@ SERVER_HEAD_IMG_ADDR=https://www.leyuna.xyz/image/avatar/
 SERVER_HEAD_IMG_DEFAULT=https://www.leyuna.xyz/image/avatar/default.jpg
 SERVER_HEAD_IMG_ADMIN=https://www.leyuna.xyz/image/avatar/admin.jpg
 SERVER_IMG_SAVE_PATH=https://www.leyuna.xyz/image/
+SERVER_COVER_SAVE_PATH=https://www.leyuna.xyz/image/cover/
 SERVER_EMO_SAVE_PATH=https://www.leyuna.xyz/image/emo/
 DIR_SAVE_PATH=C:/dir/blogDir/
 EMO_SAVE_PATH=C:/img/emo/
