[ADD]add anime cover upload

--- a/blog-start/src/main/resources/application.properties
+++ b/blog-start/src/main/resources/application.properties
@@ -34,4 +34,5 @@ SERVER_EMO_SAVE_PATH=https://www.leyuna.xyz/image/emo/
 DIR_SAVE_PATH=C:/dir/blogDir/
 EMO_SAVE_PATH=C:/img/emo/
 IMG_SAVE_PATH=C:/img/
+COVER_SAVE_PATH=C:/cover/
 SERVER_NAME=LeYuna
