[UPDATE]update admin headimg

--- a/blog-start/src/main/resources/application.properties
+++ b/blog-start/src/main/resources/application.properties
@@ -27,7 +27,7 @@ feign.client.config.default.read-timeout=50000
 ##服务器常数
 SERVER_HEAD_IMG_ADDR=https://www.leyuna.xyz/image/avatar/
 SERVER_HEAD_IMG_DEFAULT=https://www.leyuna.xyz/image/avatar/default.jpg
-SERVER_HEAD_IMG_ADMIN=https://www.leyuna.xyz/image/avatar/admin.jpg
+SERVER_HEAD_IMG_ADMIN=https://www.leyuna.xyz/image/avatar/admin.gif
 SERVER_IMG_SAVE_PATH=https://www.leyuna.xyz/image/
 SERVER_COVER_SAVE_PATH=https://www.leyuna.xyz/image/cover/
 SERVER_EMO_SAVE_PATH=https://www.leyuna.xyz/image/emo/
