--- a/blog-start/pom.xml
+++ b/blog-start/pom.xml
@@ -28,13 +28,11 @@
             </plugin>
         </plugins>
     </build>
-
     <dependencies>
         <dependency>
-            <groupId>com.leyuna</groupId>
+            <groupId>xyz.leyuna</groupId>
             <artifactId>waylocation-spring-boot-start</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <version>0.0.2.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.leyuna</groupId>
@@ -59,5 +57,6 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
+        
     </dependencies>
 </project>
