[UPDATE]cacheName and clearCache logic

--- a/blog-start/pom.xml
+++ b/blog-start/pom.xml
@@ -32,7 +32,8 @@
         <dependency>
             <groupId>xyz.leyuna</groupId>
             <artifactId>waylocation-spring-boot-start</artifactId>
-            <version>0.0.2.RELEASE</version>
+            <version>0.0.3</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.leyuna</groupId>
