--- a/blog-start/src/main/resources/bootstrap.properties
+++ b/blog-start/src/main/resources/bootstrap.properties
@@ -6,4 +6,4 @@ spring.cloud.nacos.config.file-extension=properties
 spring.cloud.nacos.config.prefix=LEYUNA-BLOG
 spring.profiles.active=dev
 server.port=9000
-waylocation.saveType=test 
+#waylocation.saveType=test 
