--- a/blog-core/pom.xml
+++ b/blog-core/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>ikanalyzer</artifactId>
             <version>2012_u6</version>
         </dependency>
+        <!--Sa-Token-->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>${sa-token.verison}</version>
+        </dependency>
     </dependencies>
 
 </project>
