--- a/blog-start/src/main/resources/application.properties
+++ b/blog-start/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.redis.database=0
 spring.redis.host=127.0.0.1
 # Redis服务器连接端口
 spring.redis.port=6379
-# Redis服务器连接密码（默认为空）  暂时没弄懂设密码的必要 在一台服务器使用的时候
+# Redis服务器连接密码（默认为空）
 #spring.redis.password=
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.poolMaxActive=20
