--- a/blog-start/src/main/resources/bootstrap.properties
+++ b/blog-start/src/main/resources/bootstrap.properties
@@ -1,10 +1,10 @@
-spring.application.name=LEYUNA-BLOG
-
-spring.cloud.nacos.discovery.server-addr=localhost:8848
-spring.cloud.nacos.config.server-addr=localhost:8848
-spring.cloud.nacos.config.file-extension=properties
-spring.cloud.nacos.config.prefix=LEYUNA-BLOG
-logging.level.com.alibaba.nacos.client.naming= error
-spring.profiles.active=dev
+#spring.application.name=LEYUNA-BLOG
+#
+#spring.cloud.nacos.discovery.server-addr=localhost:8848
+#spring.cloud.nacos.config.server-addr=localhost:8848
+#spring.cloud.nacos.config.file-extension=properties
+#spring.cloud.nacos.config.prefix=LEYUNA-BLOG
+#logging.level.com.alibaba.nacos.client.naming= error
+#spring.profiles.active=dev
 server.port=9000
-#waylocation.saveType=test
+##waylocation.saveType=test
