--- a/blog-core/pom.xml
+++ b/blog-core/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>sa-token-spring-boot-starter</artifactId>
             <version>${sa-token.verison}</version>
         </dependency>
+        <!--Aliyun OSS-->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.15.0</version>
+        </dependency>
     </dependencies>
 
 </project>
