[update]阶段性提交

--- a/blog-start/src/main/resources/application.properties
+++ b/blog-start/src/main/resources/application.properties
@@ -1,38 +1,28 @@
-# REDIS (RedisProperties)
-# Redis数据库索引（默认为0）
-spring.redis.database=0
-# Redis服务器地址
-spring.redis.host=127.0.0.1
-# Redis服务器连接端口
-spring.redis.port=6379
-# Redis服务器连接密码（默认为空）
-#spring.redis.password=
-# 连接池最大连接数（使用负值表示没有限制）
-spring.redis.poolMaxActive=20
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
-spring.redis.poolMaxWait=-1
-# 连接池中的最大空闲连接
-spring.redis.poolMaxIdle=8
-# 连接池中的最小空闲连接
-spring.redis.poolMinIdle=0
-# 连接超时时间（毫秒）
-spring.redis.timeout=5000
-spring.application.name=LEYUNA-BLOG
-# 熔断器配置
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-feign.hystrix.enabled=true
-# feign客户端配置
-feign.client.config.default.connect-timeout=50000
-feign.client.config.default.read-timeout=50000
-##服务器常数
-SERVER_HEAD_IMG_ADDR=https://www.leyuna.xyz/image/avatar/
-SERVER_HEAD_IMG_DEFAULT=https://www.leyuna.xyz/image/avatar/default.jpg
-SERVER_HEAD_IMG_ADMIN=https://www.leyuna.xyz/image/avatar/admin.gif
-SERVER_IMG_SAVE_PATH=https://www.leyuna.xyz/image/
-SERVER_COVER_SAVE_PATH=https://www.leyuna.xyz/image/cover/
-SERVER_EMO_SAVE_PATH=https://www.leyuna.xyz/image/emo/
-DIR_SAVE_PATH=C:/dir/blogDir/
-EMO_SAVE_PATH=C:/img/emo/
-IMG_SAVE_PATH=C:/img/
-COVER_SAVE_PATH=C:/cover/
-SERVER_NAME=LeYuna
+## REDIS (RedisProperties)
+## Redis数据库索引（默认为0）
+#spring.redis.database=0
+## Redis服务器地址
+#spring.redis.host=127.0.0.1
+## Redis服务器连接端口
+#spring.redis.port=6379
+## Redis服务器连接密码（默认为空）
+##spring.redis.password=
+## 连接池最大连接数（使用负值表示没有限制）
+#spring.redis.poolMaxActive=20
+## 连接池最大阻塞等待时间（使用负值表示没有限制）
+#spring.redis.poolMaxWait=-1
+## 连接池中的最大空闲连接
+#spring.redis.poolMaxIdle=8
+## 连接池中的最小空闲连接
+#spring.redis.poolMinIdle=0
+## 连接超时时间（毫秒）
+#spring.redis.timeout=5000
+#spring.application.name=LEYUNA-BLOG
+## 熔断器配置
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+#feign.hystrix.enabled=true
+## feign客户端配置
+#feign.client.config.default.connect-timeout=50000
+#feign.client.config.default.read-timeout=50000
+###服务器常数
+#SERVER_NAME=LeYuna
