--- a/blog-start/pom.xml
+++ b/blog-start/pom.xml
@@ -2,9 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.leyuna</groupId>
     <artifactId>blog-start</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <version>0.0.1-SNAPSHOT</version>
     <name>blog-start</name>
@@ -17,6 +16,17 @@
     <properties>
         <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
+    <build>
+        <!-- 为jar包取名 -->
+        <finalName>leyun-blog</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.0.RELEASE</version>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>com.leyuna</groupId>
